[gd_scene load_steps=19 format=3 uid="uid://br16sg8547t7i"]

[ext_resource type="Script" uid="uid://bawuhhuql053e" path="res://src/Duel/enemy.gd" id="1_gum6w"]
[ext_resource type="PackedScene" uid="uid://dml8aua0as0nb" path="res://res/models/samurai.glb" id="2_c1w3u"]
[ext_resource type="PackedScene" uid="uid://dcwlwois5p8ku" path="res://res/models/sword.glb" id="3_liqmj"]
[ext_resource type="Material" uid="uid://bso3y86tnuou3" path="res://res/materials/samurai_mat_enemy.tres" id="3_vrbx1"]
[ext_resource type="PackedScene" uid="uid://cqu2p17dlhwjh" path="res://res/models/sword_sheathed.glb" id="4_a17ok"]
[ext_resource type="PackedScene" uid="uid://cttpv7urvigkw" path="res://res/models/sheath.glb" id="5_vrbx1"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bktlc"]
animation = &"Draw"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pg28d"]
animation = &"Fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_21lrq"]
animation = &"Hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ehvfd"]
animation = &"Ready"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a17ok"]
animation = &"Sheath"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bktlc"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ehvfd"]
xfade_time = 0.03
advance_mode = 2
advance_condition = &"draw"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rq7o7"]
xfade_time = 0.02
advance_mode = 2
advance_condition = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nrj4s"]
xfade_time = 0.02
advance_mode = 2
advance_condition = &"hurt"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rclot"]
xfade_time = 0.1
advance_mode = 2
advance_condition = &"fall"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vrbx1"]
advance_mode = 2
advance_condition = &"sheath"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_a17ok"]
states/Draw/node = SubResource("AnimationNodeAnimation_bktlc")
states/Draw/position = Vector2(548, 106)
states/Fall/node = SubResource("AnimationNodeAnimation_pg28d")
states/Fall/position = Vector2(621, 221)
states/Hurt/node = SubResource("AnimationNodeAnimation_21lrq")
states/Hurt/position = Vector2(454, 221)
states/Ready/node = SubResource("AnimationNodeAnimation_ehvfd")
states/Ready/position = Vector2(352, 101)
states/Sheath/node = SubResource("AnimationNodeAnimation_a17ok")
states/Sheath/position = Vector2(700, 106)
states/Start/position = Vector2(201, 101)
transitions = ["Start", "Ready", SubResource("AnimationNodeStateMachineTransition_bktlc"), "Ready", "Draw", SubResource("AnimationNodeStateMachineTransition_ehvfd"), "Ready", "Hurt", SubResource("AnimationNodeStateMachineTransition_rq7o7"), "Draw", "Hurt", SubResource("AnimationNodeStateMachineTransition_nrj4s"), "Hurt", "Fall", SubResource("AnimationNodeStateMachineTransition_rclot"), "Draw", "Sheath", SubResource("AnimationNodeStateMachineTransition_vrbx1")]
graph_offset = Vector2(-38, 67)

[node name="Enemy" type="Node3D"]
script = ExtResource("1_gum6w")

[node name="SamuraiMesh" parent="." instance=ExtResource("2_c1w3u")]

[node name="Skeleton3D" parent="SamuraiMesh/Armature" index="0"]
bones/0/position = Vector3(3.6119612e-08, 3.2159984, -0.4131602)
bones/0/rotation = Quaternion(0.056220632, 0, 4.914964e-09, 0.9984184)
bones/1/rotation = Quaternion(0.1064626, -1.8457218e-15, 1.0118174e-08, 0.9943167)
bones/2/rotation = Quaternion(0.055321284, 0.2784921, -0.88904524, 0.35913834)
bones/3/rotation = Quaternion(0.6131067, 0.06281491, -0.36227435, 0.69922227)
bones/4/rotation = Quaternion(-0.03721431, 0.0009237666, 0.03130244, 0.9988166)
bones/5/rotation = Quaternion(0.020640237, -0.06490693, -0.12932862, 0.98926)
bones/6/rotation = Quaternion(0.055669148, -0.21659432, -0.42743388, 0.87594986)
bones/7/rotation = Quaternion(0.085065074, -0.11128118, -0.22680686, 0.9638149)
bones/8/rotation = Quaternion(-0.21933939, 0.00042190036, -0.21665993, 0.9512879)
bones/10/rotation = Quaternion(0, 1.110223e-16, 4.1633363e-16, 1)
bones/11/rotation = Quaternion(-0.05959222, 0.1860017, 0.9792305, -0.05440498)
bones/12/rotation = Quaternion(0.36512712, -0.6895875, 0.40629017, 0.47547832)
bones/13/rotation = Quaternion(0.008558059, -0.53005147, -0.0015406855, 0.8479209)
bones/14/rotation = Quaternion(-0.0074950648, 0.003071922, 0.09179179, 0.9957453)
bones/15/rotation = Quaternion(-0.05713662, 0.017254166, 0.46205395, 0.88484114)
bones/16/position = Vector3(-0.18753411, -0.060508564, 0.14451274)
bones/16/rotation = Quaternion(-0.0025618752, -0.27023405, 0.23802175, 0.9329055)
bones/17/rotation = Quaternion(-0.12956071, -0.011200975, -0.028798899, 0.99108994)
bones/18/rotation = Quaternion(0.20498383, 0.37385496, 0.9005569, -0.08491973)
bones/19/rotation = Quaternion(-0.50216883, 0.00033758776, -0.062731385, 0.8624913)
bones/20/rotation = Quaternion(-0.020291189, 0.62693435, 0.77379376, -0.08823273)
bones/21/rotation = Quaternion(-0.22594717, 0.166132, 0.94053316, 0.19169156)
bones/22/rotation = Quaternion(-0.43633917, -0.00035157896, 0.054507878, 0.8981297)
bones/23/rotation = Quaternion(0.08364079, 0.5362495, 0.79644847, -0.26666585)
bones/24/position = Vector3(1.0508904, 2.0648413, 0.9037075)
bones/25/position = Vector3(0.6417752, 0.22453666, 0.03741944)
bones/25/rotation = Quaternion(-0.6994004, 0.10411044, 0.10411044, 0.69940054)
bones/26/position = Vector3(-1.6231029, 2.0648413, 0.9037073)
bones/27/position = Vector3(-1.0883868, 0.22453666, -1.2290311)
bones/27/rotation = Quaternion(-0.6042894, -0.36719793, -0.36719793, 0.6042894)

[node name="samurai" parent="SamuraiMesh/Armature/Skeleton3D" index="0"]
surface_material_override/0 = ExtResource("3_vrbx1")

[node name="HandAttachment" type="BoneAttachment3D" parent="SamuraiMesh/Armature/Skeleton3D" index="1"]
transform = Transform3D(0.49293178, 0.8699308, 0.015443026, 0.8417858, -0.4813221, 0.24438804, 0.22003385, -0.10746689, -0.9695543, 0.79515666, 4.0543566, 0.22787313)
bone_name = "MidHand.R"
bone_idx = 14

[node name="sword2" parent="SamuraiMesh/Armature/Skeleton3D/HandAttachment" instance=ExtResource("3_liqmj")]
transform = Transform3D(4.9870377, 0.24679826, -0.26175353, 0.15110657, -4.738449, -1.5887756, -0.32648212, 1.5767481, -4.7336287, 0.09386158, 1.0089993, 2.5776772)

[node name="sword_sheathed" parent="SamuraiMesh/Armature/Skeleton3D/HandAttachment" instance=ExtResource("4_a17ok")]
transform = Transform3D(4.9870377, 0.2467978, -0.26175216, 0.15110648, -4.73845, -1.5887768, -0.32648164, 1.5767485, -4.7336273, 0.09386158, 1.0089993, 2.5776772)

[node name="HipAttachment" type="BoneAttachment3D" parent="SamuraiMesh/Armature/Skeleton3D" index="2"]
transform = Transform3D(1, -9.814381e-09, 5.5264476e-10, 9.814381e-09, 0.9936785, -0.112263426, 5.5264476e-10, 0.112263426, 0.9936785, 3.6119612e-08, 3.2159984, -0.4131602)
bone_name = "Hip"
bone_idx = 0

[node name="sheath2" parent="SamuraiMesh/Armature/Skeleton3D/HipAttachment" instance=ExtResource("5_vrbx1")]
transform = Transform3D(2.56656, -3.9630349, -1.6453298, 4.185449, 2.7347105, -0.058074236, 0.9459305, -1.3474789, 4.721176, 1.7928433, 0.8294747, -2.0185585)

[node name="sword_sheathed" parent="SamuraiMesh/Armature/Skeleton3D/HipAttachment" instance=ExtResource("4_a17ok")]
transform = Transform3D(2.5665581, -3.9630327, -1.6453289, 4.1854463, 2.734708, -0.058074065, 0.9459298, -1.3474779, 4.721173, 1.7928433, 0.8294747, -2.0185585)

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../SamuraiMesh")
tree_root = SubResource("AnimationNodeStateMachine_a17ok")
anim_player = NodePath("../SamuraiMesh/AnimationPlayer")
parameters/conditions/draw = false
parameters/conditions/fall = false
parameters/conditions/hurt = false
parameters/conditions/sheath = false

[editable path="SamuraiMesh"]
